--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "bizcharts": "^4.1.11",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "dexie": "^3.2.2",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "query-string": "^6.13.8",
+    "quill": "^1.3.7",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.2",
     "react-color": "^2.18.1",
     "react-dom": "^17.0.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
