--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "dexie": "^3.2.2",
+    "dexie-react-hooks": "^1.1.1",
+    "fuse.js": "^6.6.2",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
@@ -39,7 +41,8 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@arco-plugins/webpack-react": "^1.1.1",
