--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dexie-react-hooks": "^1.1.1",
     "fuse.js": "^6.6.2",
     "http-proxy-middleware": "^2.0.6",
+    "is-electron": "^2.2.1",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
