--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "customize-cra-less-loader": "^2.0.0",
     "electron": "^20.1.1",
     "electron-builder": "^23.3.3",
+    "electron-packager": "^16.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
