--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepare": "husky install && husky add .husky/pre-commit 'npm run pre-commit'",
     "electron": "NODE_ENV=development electron .",
     "mail-dev": "NODE_ENV=development node ./public/emailServer.js",
-    "webpack": "webpack --progress"
+    "webpack": "webpack --progress",
+    "build-icon": "npx electron-icon-builder --input=./public/sustech.png --output=build --flatten"
   },
   "dependencies": {
     "@antv/data-set": "^0.11.8",
@@ -65,6 +66,7 @@
     "customize-cra-less-loader": "^2.0.0",
     "electron": "^20.1.1",
     "electron-builder": "^23.3.3",
+    "electron-icon-builder": "^2.0.1",
     "electron-packager": "^16.0.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
@@ -103,6 +105,9 @@
     "appId": "sustech.shude.automail",
     "directories": {
       "output": "out"
+    },
+    "win": {
+      "icon": "public/icons/icon.ico"
     },
     "mac": {
       "target": "dmg"
