--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "arco-design-pro",
+  "name": "automail",
   "version": "1.0.0",
-  "description": "Arco Design Pro",
+  "description": "青年大学习邮件提醒系统",
   "main": "public/main.js",
   "homepage": "./",
   "scripts": {
@@ -16,7 +16,8 @@
     "electron": "NODE_ENV=development electron .",
     "mail-dev": "NODE_ENV=development node ./public/emailServer.js",
     "webpack": "webpack --progress",
-    "build-icon": "npx electron-icon-builder --input=./public/sustech.png --output=build --flatten"
+    "build-electron": "npx electron-builder",
+    "build-icon": "npx electron-icon-builder --input=./public/sustech.png --output=public --flatten"
   },
   "dependencies": {
     "@antv/data-set": "^0.11.8",
