--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
       "oneClick": false,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
-      "shortcutName": "大学习一键邮件提醒"
+      "allowToChangeInstallationDirectory": true,
+      "shortcutName": "青年大学习邮件提醒"
     }
   }
 }
